fix dark mode

--- a/src/base.css
+++ b/src/base.css
@@ -10,7 +10,7 @@
 
 @layer base {
   body {
-    @apply bg-zinc-50 dark:bg-zinc-900;
+    @apply bg-zinc-50 dark:bg-zinc-900 dark:text-zinc-50;
   }
   h1,
   h2,
